2001-10-22  Stephen Browne  <<stephen.browne@sun.com>>

        * gnome-desktop/Makefile.am:
        * gnome-desktop/gnome-hint.c:
        * gnome-desktop/gnome-hint.h:
        * gnome-desktop/test-hint.c:

        Added a gnome_hint widget to libgnome-desktop

2001-10-11  Alex Larsson  <alexl@redhat.com>

	* gnome-desktop-item.c (ditem_execute, gnome_desktop_item_launch):
	Convert app launching to new api. Not tested yet, but at least
	compiles.

2001-10-10  Alex Larsson  <alexl@redhat.com>

	* gnome-desktop-item.c (escape_string_and_dup,
	escape_string_and_dup):
	Don't write past end of string.

2001-10-09  Havoc Pennington  <hp@redhat.com>

	* gnome-desktop-item.c (gnome_desktop_item_new): create the hash
	table here, since we use it and assume it's always non-nul

Wed Sep 26 23:04:04 2001  George Lebl <jirka@5z.com>

	* gnome-ditem-edit.[ch]:  Add a _set_editable call which makes
	  the entry editable or not.  Useful for read only items.  Currently
	  a stupid implementation.

2001-09-25  Darin Adler  <darin@bentspoon.com>

	* gnome-desktop-item.c: (gnome_desktop_item_launch): Update
	calls for change in gnome_url_show API.

Fri Sep 21 12:14:06 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.h: include gobject/gtype.h

	* gnome-ditem-edit.[ch]: include evil api to grab focus, to be
	  replaced by a correct way to do this in the future.

2001-09-21  Glynn Foster <glynn.foster@sun.com>

	* test-ditem.c: (test_ditem): Fix up this to pass the right 
	  number of args to gnome_desktop_item_get_type () and 
          gnome_desktop_item_set_localestring ()

Thu Sep 20 16:38:11 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: make sure name/encoding/version are set,
	  location return is now const, and some better checks.  Also fix
	  saving 'under' and some 'modified' logic

	* gnome-ditem-edit.h: fix comment

Thu Sep 20 15:15:54 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: string vector const weirdness removed
