@@ -1,4 +1,11 @@
-2001-10-22  Stephen Browne  <<stephen.browne@sun.com>>
+2001-10-25 Stephen Browne <stephen.browne@sun.com?
+
+	* gnome-desktop/gnome-hint.c
+	* gnome-desktop/test-hint.c
+
+	Some cleanup plus added support for a show at startup checkbox
+
+2001-10-22  Stephen Browne  <stephen.browne@sun.com>
 
         * gnome-desktop/Makefile.am:
         * gnome-desktop/gnome-hint.c:
